#92 : Fix no-wrap.

--- a/ontrack-web/src/less/extension-git.less
+++ b/ontrack-web/src/less/extension-git.less
@@ -23,6 +23,8 @@
   .ot-extension-git-changelog-message {
     white-space: nowrap;
     text-overflow: ellipsis;
+    display: block;
+    overflow: hidden;
   }
   .ot-extension-git-changelog-meta {
     .pull-right;
